# oreilly-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  stdio_server.py
